test/org/midica/testfiles/failing/zero-with-m-3.midica
INCLUDE inc/instruments.midica

CALL f

FUNCTION f
	{
		{
			0  c,d  pat
		}
	}
END

PATTERN pat
	{
		{
			- - m
		}
	}
END
